gateway/manifests/gateway-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: gateway-deployment

  labels:

    app: gateway

spec:

  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge : 3
      maxUnavailable : 1

  selector:
    matchLabels:
      app: gateway

  template:

    metadata:
      labels:
        app: gateway

    spec:
      containers:
      - name: gateway
        image: abdelrhmanhamdy/gateway:latest
        ports:
        - containerPort: 8080
