gateway/manifests/ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/prox-read-timeout: "600"
    nginx.ingress.kubernetes.io/prox-send-timeout:  "600"

spec:

  #ingressClassName: nginx-example

  rules:
    - host : "mp3converter.com"
      http:
          paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
